--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 MONGO_URL="mongodb://localhost:27017/beatbooker"
 
 JWT_SECRET="BEATBOOKER"
+
+CLOUDINARY_NAME="dlg6a3jqs"
+
+CLOUDINARY_API_KEY="466696392744357"
+
+CLOUDINARY_API_SECRET="6gvMfAeM3k-14ix-XFlkH9zBzYA"
