--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.9",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "validator": "^13.12.0"
   }
 }
